Open JDK packages for Java 17 tests